--- a/docs/alkiln/setup.mdx
+++ b/docs/alkiln/setup.mdx
@@ -8,15 +8,15 @@ slug: /alkiln/setup
 import GitHubSetup from './components/\_github_setup.md';
 
 
-<!-- TODO: Should this include how to run the tests? -->
-You can install and run ALKiln in different ways and in different environments. You can use as many of these methods as you want. They each have their advantages and disadvantages.
+<!-- TODO: Should this include how to run the tests? Workflow files, trigger automatically, on a schedule, manually, tags, ALKiln versions, etc. Pros and cons are already kind of about running the tests. -->
+This page will tell you about the different ways to set up and run your ALKiln tests. You can install and run ALKiln in different ways and in different environments. You can use as many of these methods as you want. They each have their advantages and disadvantages.
 
 
 ## Recommended setup: GitHub tests that run on your server {#recommended-setup}
 
 This is the way we recommend setting up ALKiln tests for the first time. You are least likely to run into setup problems with this method.
 
-The tests run whenever you commit any code to any branch on GitHub. You can read more details and the [pros and cons of GitHub tests](#github-considerations) below.
+The tests run whenever you commit any code to any branch on GitHub. You can read more details and the [pros and cons of GitHub tests](#github-details) below.
 
 **You need:**
 
@@ -69,7 +69,7 @@ To run the tests you can commit new code to your GitHub repository or you can [t
 
 ## Set up to test in your Playground {#playground-how-to}
 
-You can run this kind of test when you are logged into your account on your docassemble server. You can read more details and the [pros and cons of Playground tests](#playground-considerations) below.
+You can run this kind of test when you are logged into your account on your docassemble server. You can read more details and the [pros and cons of Playground tests](#playground-details) below.
 
 **You need:**
 
@@ -122,7 +122,7 @@ To run tests:
 
 Isolated server tests actually also run on GitHub. They never interact with your server, though. This is an advanced method and we are happy to help you with it.
 
-The tests run whenever you commit any code to any branch on GitHub. You can read more details and the [pros and cons of isolated server tests](#isolated-server-considerations) below.
+The tests run whenever you commit any code to any branch on GitHub. You can read more details and the [pros and cons of isolated server tests](#isolated-server-details) below.
 
 **You need:**
 
@@ -145,17 +145,50 @@ Then edit the new workflow to look like [ALKiln's own workflow file](https://git
 To run the tests you can commit new code to your GitHub repository or you can [trigger your workflow manually](https://docs.github.com/en/actions/using-workflows/manually-running-a-workflow#running-a-workflow).
 
 
-## GitHub tests - pros and cons {#github-considerations}
+## GitHub test details {#github-details}
+
+These tests run on GitHub, but they still interact with your server. For these tests, ALKiln adds a Project the testing account you created on your docassemble sever. ALKiln then opens a browser and goes to the url of the interview in that project. So GitHub starts the tests, but the Project is on your server and ALKiln interacts with that Project.
+
+**Pros**
+
+- ALKiln on GitHub will test any changes any team member commits. On your server, you only tests your changes.
+- On GitHub, there are ways to schedule tests to run regularly - every week, every day, or whatever schedule you prefer. If packages you depend on change and break your code, those tests will let you know.
+- If you've forgotten to add a file to the package that an interview depends on (like a missing template file), GitHub will catch that. It installs the file fresh in a new Project, so it only has the files that have been committed properly.
+- You can continue editing any files in your Playground while the GitHub tests run because GitHub creates a whole new Project of its own. When running tests on your server, you must avoid editing the Project that ALKiln is testing.
+- You can configure your GitHub "action" to do other things, like create GitHub issues whenever tests fail.
+- If your server reloads during the test run, a few individual tests may fail, but ALKiln will still be able to continue and keep trying to run the rest of the tests. That is because the test code is in running from GitHub, so your reload doesn't stop that process.
+
+**Cons**
+
+- To get these set up, you need to create a docassemble API key, a GitHub token, and make GitHub secrets and you may have to update these in the future. [The ALKiln test setup interview](https://apps-dev.suffolklitlab.org/start/test-setup) helps you do these things, but they can still be confusing.
+- Your tests might be more flaky. That means they may fail for reasons that don't have to do with the interviews. For example, if your tests are running while your server is reloading, ALKiln will keep running, so other tests will still have an opportunity to continue, but individual tests may fail even if your code is correct. Your server can reload for many reasons - updating your config, installing a new package, etc. When tests fail meaninglessly, it slows down your development cycle and sometimes people end up turning off the tests instead of dealing with the complexity.
 
 
+## Playground test details {#playground-details}
+
+You trigger these tests by
+
+### Pros {#playground-pros}
+
+- You don't need to put your package on GitHub to run the tests.
+- Running ALKiln on your server lets you loop through your development cycle faster - edit, test, edit, test. You don't have to go through committing your code to GitHub every time.
+- You can see the output online right away, including images and documents. In GitHub, to see _all_ of the output files, you have to download a zip file. The only thing you can see online in GitHub is the summary report.
+- You can more easily limit your tests to a specific set of tests using [tag expressions](https://www.cuketest.com/en/cucumber/tag-expressions). You can use tags on GitHub too, it just takes more steps.
+- You can more often avoid the red "x" that appears next to failing tests on GitHub. The red "x" is a useful piece of information, but it can be uncomfortable.
+
+### Cons {#playground-cons}
+
+For everyone:
+
+- You'll miss catching some kinds of mistakes. Specifically, you may add a file to your Playground and forget to commit it to GitHub. Your tests will pass in your Playground, but your interview will break when you or others install it from GitHub.
+- If your server reloads while the tests are running, the tests may get unexpected results. You may have to start the tests all over again.
+
+For some people:
+
+- If you are using a docassemble Docker image created before April 9th, 2023, you will have to do a ["system upgrade"](https://docassemble.org/docs/docker.html#upgrading) to update your server to a newer docassemble Docker image. Any version of https://github.com/jhpyle/docassemble-os that is older than 1.0.8 uses versions of `node` that are too old for ALKiln. As of February 11th, 2024, ALKiln is using node v18. A lot of people have upgraded already and it is a very good idea to do that, for security at the very least. If you do need to upgrade, though, you need to back up all your data, delete your old image and container, get the new image, create a new container, and restore your data. It may sound simple, but it is a tricky process.
 
 
-## Playground tests - pros and cons {#playground-considerations}
-
-
-
-
-## Isolated server - pros and cons {#isolated-server-considerations}
+## Isolated server test details {#isolated-server-details}
 
 
 
